# open-scoreboard

./: README.md
Firmware/: .gitignore  Cargo.toml  memory.x
Firmware/.cargo/: config.toml
Firmware/bootloader/src/: main.rs
Firmware/softdevice/: memory.x
Firmware/src/: main.rs
Housing/: Cover - Part13^Cover-1.STL  Part13^Cover.STL  Part13^Cover_Chopped.STL  Part14^Cover.STL
KiCad PCB/: README.md  Scoreboard.kicad_pcb  Scoreboard.kicad_prl
Phone App/: README.md  app.json  package-lock.json  package.json
Phone App/android/: settings.gradle
Phone App/android/app/: build.gradle
Phone App/android/app/src/main/: AndroidManifest.xml
Phone App/android/app/src/main/java/com/phirks/OpenScore/: MainActivity.kt  MainApplication.kt
Phone App/android/app/src/main/res/values/: strings.xml
Phone App/context/: GlobalProvider.tsx
Phone App/ios/: Podfile
Phone App/ios/OpenScore/: Info.plist
Phone App/ios/OpenScore.xcodeproj/: project.pbxproj
Phone App/ios/OpenScore.xcodeproj/xcshareddata/xcschemes/: OpenScore.xcscheme
Phone App/ios/OpenScore.xcworkspace/: contents.xcworkspacedata
Phone App/ios/OpenScoreWatch Watch App/: ContentView.swift  OpenScoreWatchApp.swift  ViewModel.swift
Phone App/src/app/: index.tsx
Phone App/src/app/(tabs)/: _layout.tsx  clock.tsx  scoreboard.tsx  settings.tsx  timer.tsx
