[package]
name = "scoreboard"
version = "0.1.0"
edition = "2021"
description = "Bootloader for nRF chips"
license = "MIT OR Apache-2.0"

[dependencies]
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }

embassy-nrf = { git = "https://github.com/embassy-rs/embassy", rev = "659c616f9f13aa6f157eaef5279f09805449b5be", features = ["nrf52833"]}
embassy-boot-nrf = { git = "https://github.com/embassy-rs/embassy", rev = "659c616f9f13aa6f157eaef5279f09805449b5be", features = []}
embassy-sync ={ git = "https://github.com/embassy-rs/embassy", rev = "659c616f9f13aa6f157eaef5279f09805449b5be" }
cortex-m-rt = { version = "0.7" }
cfg-if = "1.0.0"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }

[features]
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "embassy-boot-nrf/defmt",
    "embassy-nrf/defmt",
]
softdevice = [
    "embassy-boot-nrf/softdevice",
]

[profile.dev]
debug = 2
debug-assertions = true
incremental = false
opt-level = 'z'
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false